# minerva-system

./: .dockerignore  .env  .gitignore  404.html  CHANGELOG.html  CHANGELOG.md  Cargo.toml  Jenkinsfile  README.md  Rocket.toml  backend.html  banco-nao-relacional.html  banco-relacional.html  banco.html  build_base.sh  cache-redis.html  colecoes.html  compilacao.html  compilation.groovy  deploy-compose.html  deploy-kubernetes.html  deploy-minikube.html  deploy-swarm-machine.html  deploy-swarm.html  deploy.html  diagramas-intro.html  diagramas-sequencia-sessao.html  diagramas-sequencia-usuarios.html  diagramas-sequencia.html  docker-compose.yml  docker-stack.yml  documentacao.html  especificacao-intro.html  estrutura.html  executar-maquina.html  ferramentas-monitoramento-externas.html  frontend.html  generate_and_push.sh  generate_cross_push.sh  generate_images.sh  (+32 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: docs-build.yml  docs.yml  release-images.yml  tests.yml
deploy/: api-ingress.yml  docker-compose.yml  frontend-deployment.yml  frontend-svc.yml  minerva-ingress.yml  mongodb-deployment.yml  mongodb-svc.yml  mongoexpress-deployment.yml  mongoexpress-svc.yml  pgadmin-pvc.yml  pgadmin-secret.yml  pgadmin-svc.yml  ports-configmap.yml  postgresql-configmap.yml  postgresql-deployment.yml  redis-configmap.yml  redis-hpa.yml  redis-statefulset.yml  redis-svc.yml  rediscommander-deployment.yml  rest-deployment.yml  rest-hpa.yml  runonce-configmap.yml  runonce-job.yml  runonce-secret.yml  servers-configmap.yml  session-deployment.yml  session-svc.yml  stress_test.sh  user-deployment.yml  users-deployment.yml  users-hpa.yml  users-svc.yml
deploy/compose/: docker-compose-services.yml  docker-compose.yml  make_log_dir.sh
deploy/k8s/: api-ingress.yml  broker-rabbitmqcluster.yml  dispatch-deployment.yml  dispatch-hpa.yml  frontend-configmap.yml  frontend-ingress.yml  grafana-deployment.yml  grafana-svc.yml  log-configmap.yml  minerva-api-ingress.yml  minerva-dispatch.yml  minerva-frontend.yml  minerva-ingress.yml  minerva-namespace.yml  minerva-rest.yml  minerva-runonce.yml  minerva-session.yml  minerva-user.yml  mongodb-configmap.yml  mongodb-deployment.yml  mongodb-pvc.yml  mongodb.yml  mongoexpress-configmap.yml  mongoexpress-secret.yml  pgadmin-configmap.yml  pgadmin-statefulset.yml  ports-configmap.yml  postgresql-pvc.yml  postgresql-svc.yml  postgresql.yml  prometheus-clusterrole.yml  prometheus-clusterrolebinding.yml  prometheus-configmap.yml  prometheus-deployment.yml  prometheus-serviceaccount.yml  prometheus-svc.yml  rabbitmq.yml  redis-pvc.yml  redis.yml  rediscommander-configmap.yml  (+12 more)
diagramas/: alteracao-usuarios.html  cadastro-usuarios.html  casos-de-uso.html  consultar-usuarios.html  diagrama-arquitetura.html  dispatch.html  elasticsearch.html  estrutura-kubernetes.html  fluentd.html  grafana.html  kibana.html  kubernetes.py  lista-usuarios.html  login.html  logoff.html  minerva.py  mongodb.html  postgresql.html  prometheus.html  rabbitmq.html  redis.html  remocao-usuarios.html  rest.html  session.html  user.html
doc/: crates.js  search-index.js  settings.html  source-files.js
docs/: book.toml
helpers/: port-forwards.sh  requests.http
minerva-broker/: Cargo.toml
minerva-broker/src/: lib.rs  model.rs
minerva-cache/: Cargo.toml
minerva-cache/src/: auth.rs  lib.rs
minerva-data/: .env  Cargo.toml  make_docker_db.sh
minerva-data/migrations/2022-05-03-012250_create_user/: up.sql
minerva-data/migrations/2022-05-03-013428_create_product/: down.sql  up.sql
minerva-data/migrations/2022-05-03-024221_create_client/: up.sql
minerva-data/migrations/2022-05-03-024557_create_address/: up.sql
minerva-data/migrations/2022-05-03-025359_create_stock/: up.sql
minerva-data/migrations/2022-05-03-025839_create_stock_mov/: down.sql
minerva-data/migrations/2022-05-03-030641_create_syslog/: up.sql
minerva-data/src/: db.rs  encryption.rs  enum_error.rs  file.rs  lib.rs  log.rs  mongo.rs  schema.rs  session.rs  syslog.rs  tenancy.rs  user.rs
minerva-data/src/db/: create.rs  mod.rs
minerva-dispatch/: Cargo.toml
minerva-dispatch/src/: controller.rs  error.rs  main.rs
minerva-dispatch/src/controller/: mod.rs  session_management.rs
minerva-docs/: book.toml
minerva-product/: Cargo.toml
minerva-product/src/: main.rs  service.rs
minerva-report/: Cargo.toml
minerva-report/src/: main.rs
minerva-rest/: Cargo.toml  Rocket.toml
minerva-rest/src/: generic.rs  main.rs  tests.rs  utils.rs
minerva-rest/src/controller/: auth.rs  handlers.rs  mod.rs  response.rs  user.rs
minerva-rest/src/fairings/: auth.rs  mod.rs
minerva-rest/src/routes/: response.rs  user.rs
minerva-rpc/: Cargo.toml  build.rs
minerva-rpc/proto/: messages.proto  minerva.proto  products.proto  session.proto  user.proto  users.proto
minerva-rpc/src/: lib.rs  messages.rs  metadata.rs  products.rs  session.rs  user.rs  users.rs
minerva-runonce/: Cargo.toml  diesel.toml  make_mongo_db.sh  make_postgres_db.sh  make_rabbitmq.sh  make_redis_db.sh
minerva-runonce/migrations/2022-05-03-012250_create_user/: down.sql  up.sql
minerva-runonce/migrations/2022-05-03-024221_create_client/: down.sql
minerva-runonce/migrations/2022-05-03-024557_create_address/: down.sql  up.sql
minerva-runonce/migrations/2022-05-03-025359_create_stock/: down.sql
minerva-runonce/migrations/2022-05-03-025839_create_stock_mov/: up.sql
minerva-runonce/migrations/2022-05-03-030641_create_syslog/: down.sql  up.sql
minerva-runonce/src/: database.rs  main.rs  mongo.rs  rabbitmq.rs
minerva-session/: Cargo.toml  tenancy.toml
minerva-session/src/: main.rs  repository.rs  service.rs  tests.rs
minerva-stock/: Cargo.toml
minerva-stock/src/: main.rs
minerva-store/: Cargo.toml
minerva-user/: Cargo.toml  logging.yml
minerva-user/src/: main.rs  repository.rs  service.rs  tests.rs
minerva_frontend/: README.md  pubspec.yaml
swarm/: Vagrantfile  docker-stack.yml
vars/: minervaCompile.groovy  minervaPackageConfig.groovy  minervaPackageServices.groovy
(+782 files in other folders)
