[workspace]
version = "0.2.0"
authors = ["Lucas S. Vieira <lucasvieira@protonmail.com>"]
license = "GPLv3"
edition = "2021"
members = [
	"minerva-rpc",
	"minerva-data",
	"minerva-cache",
	"minerva-user",
	"minerva-session",
	"minerva-product",
	"minerva-stock",
	"minerva-rest",
	"minerva-runonce",
        "minerva-report",
]

