[package]
name = "minerva-broker"
version = "0.1.0"
edition = "2021"
description = "Message broker library for the Minerva System"
authors = ["Lucas S. Vieira <lucasvieira@protonmail.com>"]

[lib]
path = "src/lib.rs"

[dependencies]
lapin = "2.1.1"
futures = "0.3"
tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync", "net"]}
tokio-executor-trait = "2.0.1"
tokio-reactor-trait = "1.1.0"
reqwest = "0.11.11"