[package]
name = "minerva-cache"
version = "0.1.0"
edition = "2021"
description = "Cache library for the Minerva System"
authors = ["Lucas S. Vieira <lucasvieira@protonmail.com>"]

[lib]
path = "src/lib.rs"

[dependencies]
redis = {version = "0.21.5", features = ["tokio-comp", "aio"]}
futures = "0.3"
tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync", "net"]}