[package]
name = "minerva-data"
version = "0.2.1"
edition = "2021"
description = "Data management library for the Minerva System"
authors = ["Lucas S. Vieira <lucasvieira@protonmail.com>"]

[lib]
path = "src/lib.rs"

[dependencies]
minerva-rpc = {path = "../minerva-rpc"}
diesel = {version = "1.4.8", features = ["postgres", "extras", "numeric", "chrono"]}
diesel-derive-enum = {version = "1.1.2", features = ["postgres"]}
dotenv = "0.15.0"
bigdecimal = {version = "0.1.2", features = ["serde"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
toml = "0.5"
num-traits = "0.2"
num-derive = "0.3"
bb8 = "0.7.1"
bb8-diesel = "0.2.1"
chrono = {version = "0.4", features = ["serde"]}
tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync", "net"]}
mongodb = "2.2.1"
argon2 = "0.4"
rand_core = {version = "0.6", features = ["std"]}
