[package]
name = "minerva-product"
version = "0.0.2"
edition = "2021"
description = "Product management microservice for the Minerva System"
authors = ["Lucas S. Vieira <lucasvieira@protonmail.com>"]

[dependencies]
minerva-rpc = {path = "../minerva-rpc"}
minerva-data = {path = "../minerva-data"}
tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync"]}
dotenv = "0.15.0"
tonic = "0.7"
diesel = {version = "1.4.8", features = ["postgres", "extras", "numeric", "chrono"]}
chrono = {version = "0.4", features = ["serde"]}
