[package]
name = "minerva-rest"
version = "0.2.1"
edition = "2021"
description = "REST gateway for the Minerva System"
authors = ["Lucas S. Vieira <lucasvieira@protonmail.com>"]

[dependencies]
minerva-rpc = {path = "../minerva-rpc"}
minerva-data = {path = "../minerva-data"}
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
tonic = "0.7"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
serial_test = "0.7.0"
