[package]
name = "minerva-rpc"
version = "0.2.2"
edition = "2021"
description = "Remote Procedure Call library for the Minerva System"
authors = ["Lucas S. Vieira <lucasvieira@protonmail.com>"]

[lib]
path = "src/lib.rs"

[dependencies]
tonic = "0.8.2"
tokio-stream = {version = "0.1", features = ["net"]}
prost = "0.11"
dotenv = "0.15.0"

[build-dependencies]
tonic-build = "0.8.2"
