[package]
name = "minerva-runonce"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel_migrations = "1.4.0"
diesel = {version = "1.4.8", features = ["postgres", "extras", "numeric", "chrono"]}
minerva-data = {path = "../minerva-data"}
dotenv = "0.15.0"
tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync"]}
chrono = {version = "0.4", features = ["serde", "rustc-serialize"]}
mongodb = "2.2.1"
