[package]
name = "minerva-stock"
version = "0.0.1"
edition = "2021"
description = "Product stock management microservice for the Minerva System"
authors = ["Lucas S. Vieira <lucasvieira@protonmail.com>"]

[dependencies]
minerva-rpc = {path = "../minerva-rpc"}
minerva-data = {path = "../minerva-data"}
tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync"]}
dotenv = "0.15.0"
diesel = {version = "1.4.8", features = ["postgres", "extras", "numeric", "chrono"]}
chrono = {version = "0.4", features = ["serde", "rustc-serialize"]}