[package]
name = "minerva-user"
version = "0.3.0"
edition = "2021"
description = "User management microservice for the Minerva System"
authors = ["Lucas S. Vieira <lucasvieira@protonmail.com>"]

[dependencies]
minerva-rpc = {path = "../minerva-rpc"}
minerva-data = {path = "../minerva-data"}
minerva-broker = {path = "../minerva-broker"}
tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync", "net"]}
dotenv = "0.15.0"
tonic = "0.8.2"
diesel = { version = "1.4.4", features = ["postgres"] }
bb8 = "0.7.1"
bb8-diesel = "0.2.1"
futures-util = "0.3"
chrono = {version = "0.4", features = ["serde"]}
lapin = "2.1.1"
log4rs = "1.2.0"
log = "0.4"
